--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 }
 * {
     color: var(--lightColor);
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
     font-weight: 900;
 }
 /* nav */
