--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
     color: var(--lightColor);
     /* font-family: 'Poppins', sans-serif; */
     font-weight: 900;
+        font-family: "Poetsen One", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+
 }
 /* nav */
 nav{
