--- a/style.css
+++ b/style.css
@@ -17,10 +17,9 @@
 * {
     color: var(--lightColor);
     /* font-family: 'Poppins', sans-serif; */
+    font-family: "Luckiest Guy", cursive;
     font-weight: 900;
-        font-family: "Poetsen One", sans-serif;
-            font-weight: 400;
-            font-style: normal;
+    font-style: normal;
 
 }
 /* nav */
