--- a/style.css
+++ b/style.css
@@ -97,56 +97,46 @@ height:inherit;
 
 
 #circle{
-        animation: infAnim 3s linear infinite;
+        animation: infAnim 5s  infinite;
     }
 @keyframes infAnim {
-    0% {
-        rotate: 15deg;
-        opacity: 50%;
+    0%{
+        transform: scale(0.95);
+        opacity: 0.2;
+        /* rotate: 10deg; */
+        filter: brightness(200%);
+        filter: blur(1px);
     }
-
-    10% {
-        opacity: 100%;
+    20%{
+        transform: scale(0.9);
+        opacity: 1;
+        /* rotate: 10deg; */
+        filter: blur(0px);
     }
-
-    20% {
-        rotate: 10deg;
+    40%{
+        transform: scale(0.95);
+        opacity: 1;
+        /* rotate: 10deg; */
+        filter: blur(0px);
     }
-
-    30% {
-        opacity: 50%;
+    60%{
+        transform: scale(0.9);
+        opacity: 0.2;
+        /* rotate: 0deg; */
+        filter: blur(0px);
     }
-
-    40% {
-        rotate: 15deg;
-    }
-
-    50% {
-        opacity: 100%;
-    }
-
-    60% {
-        rotate: -5deg;
-
-    }
-
-    70% {
-        opacity: 50%;
-    }
-
     80% {
-        rotate: 0deg;
-        
+        transform: scale(0.95);
+        opacity: 1;
+        /* rotate: -15deg; */
+        filter: blur(0px);
     }
-
-    90% {
-        opacity: 100%
-    }
-
-    100% {
-        rotate: 15deg;
-        opacity: 50%;
-        
+    
+    100%{
+        transform: scale(0.95);
+        opacity: 0.2;
+        /* rotate: 10deg; */
+        filter: blur(1px);
     }
 }
 
