--- a/style.css
+++ b/style.css
@@ -97,45 +97,45 @@ height:inherit;
 
 
 #circle{
-        animation: infAnim 5s  infinite;
+        animation: infAnim 4s  infinite;
     }
 @keyframes infAnim {
     0%{
         transform: scale(0.95);
         opacity: 0.2;
-        /* rotate: 10deg; */
+        rotate: 0deg;
         filter: brightness(200%);
         filter: blur(1px);
     }
     20%{
         transform: scale(0.9);
         opacity: 1;
-        /* rotate: 10deg; */
+        rotate: 1deg;
         filter: blur(0px);
     }
     40%{
         transform: scale(0.95);
         opacity: 1;
-        /* rotate: 10deg; */
+        /* rotate: -1deg; */
         filter: blur(1px);
     }
     60%{
         transform: scale(0.9);
         opacity: 0.2;
-        /* rotate: 0deg; */
+        rotate: 2deg;
         filter: blur(0px);
     }
     80% {
         transform: scale(0.95);
         opacity: 1;
-        /* rotate: -15deg; */
-        filter: blur(0px);
+        rotate: -3deg;
+        filter: blur(1px);
     }
     
     100%{
         transform: scale(0.95);
         opacity: 0.2;
-        /* rotate: 10deg; */
+        rotate: 0deg;
         filter: blur(1px);
     }
 }
