--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Lilita+One&family=Rubik+Glitch+Pop&display=swap");
 :root {
   --primaryColor: #60cfff;
   --secondaryColor: #009add;
@@ -32,11 +33,17 @@
 }
 * {
   color: var(--lightColor);
-  font-weight: 700;
+  font-family: "Lilita One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
+
 /* nav */
 nav {
   background: #151515;
+}
+#navLogo {
+  margin-left: 11%;
 }
 
 a:hover {
@@ -292,6 +299,9 @@ button:active {
   }
   #resume {
     width: 80%;
+  }
+  #navLogo {
+    margin-left: 0%;
   }
 }
 /*------------------------Skills--------------------*/
